--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  # All other packages must be at the same indentation level as "flutter:"
   provider: ^6.0.0
-  shared_preferences: ^2.0.0
+  shared_preferences: ^2.3.5
   cupertino_icons: ^1.0.8
-
+  # Add these new dependencies
+  firebase_core: ^3.15.2
+  firebase_auth: ^5.0.0
 
 dev_dependencies:
   flutter_test:
