--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,45 @@
-{"flutter":{"platforms":{"android":{"default":{"projectId":"stitchcraft-e62da","appId":"1:97473591547:android:ab382ad9ab8fa9f37d585e","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"stitchcraft-e62da","configurations":{"android":"1:97473591547:android:ab382ad9ab8fa9f37d585e","ios":"1:97473591547:ios:ee06f7edbe111c207d585e","macos":"1:97473591547:ios:ee06f7edbe111c207d585e","web":"1:97473591547:web:e3ab5cadaa3ba9267d585e","windows":"1:97473591547:web:73f29369137b50207d585e"}}}}}}
+{
+  "flutter": {
+    "platforms": {
+      "android": {
+        "default": {
+          "projectId": "stitchcraft-e62da",
+          "appId": "1:97473591547:android:ab382ad9ab8fa9f37d585e",
+          "fileOutput": "android/app/google-services.json"
+        }
+      },
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "stitchcraft-e62da",
+          "configurations": {
+            "android": "1:97473591547:android:ab382ad9ab8fa9f37d585e",
+            "ios": "1:97473591547:ios:ee06f7edbe111c207d585e",
+            "macos": "1:97473591547:ios:ee06f7edbe111c207d585e",
+            "web": "1:97473591547:web:e3ab5cadaa3ba9267d585e",
+            "windows": "1:97473591547:web:73f29369137b50207d585e"
+          }
+        }
+      }
+    }
+  },
+  "emulators": {
+    "singleProjectMode": true,
+    "auth": {
+      "port": 9099
+    },
+    "firestore": {
+      "port": 8080
+    },
+    "database": {
+      "port": 9000
+    },
+    "ui": {
+      "enabled": true
+    }
+  },
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
+  }
+}
+}
