--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,9 +33,9 @@ dependencies:
   provider: ^6.0.0
   shared_preferences: ^2.3.5
   cupertino_icons: ^1.0.8
-  # Add these new dependencies
-  firebase_core: ^3.15.2
-  firebase_auth: ^5.0.0
+  firebase_core: ^4.4.0
+  firebase_auth: ^6.1.4
+  cloud_firestore: ^6.1.2
 
 dev_dependencies:
   flutter_test:
