--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,8 +49,14 @@ dependencies:
   pdf: ^3.11.1
   printing: ^5.13.2
   uuid: ^4.5.1
-  flutter_local_notifications: ^20.0.0
-  timezone: ^0.10.1
+  flutter_local_notifications: ^17.0.0
+  timezone: ^0.9.0
+  fl_chart: ^0.66.0
+  mobile_scanner: ^5.0.0
+  speech_to_text: ^7.0.0
+  flutter_image_compress: ^2.3.0
+  encrypt: ^5.0.3
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
