--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -1,11 +1,11 @@
 # Project-level configuration.
 cmake_minimum_required(VERSION 3.14)
 set(CMAKE_POLICY_VERSION_MINIMUM "3.5")
-project(stitchcraft LANGUAGES CXX)
+project(StitchCraft LANGUAGES CXX)
 
 # The name of the executable created for the application. Change this to change
 # the on-disk name of your application.
-set(BINARY_NAME "stitchcraft")
+set(BINARY_NAME "StitchCraft")
 
 # Explicitly opt in to modern CMake behaviors to avoid warnings with recent
 # versions of CMake.
